Hama Change Log

Trunk (unreleased changes)

  NEW FEATURES
  
    HAMA-100: Implement of set(Matrix B) (edwardyoon)
    HAMA-145: Add privacy policy page (edwardyoon)
    HAMA-83: 2D sqaure blocking for dense matrix multiplication (edwardyoon)
    HAMA-104: Add getNumMap/reduceTasks to HamaConfiguration (edwardyoon)
    HAMA-92: Add subMatrix() to Matrix (edwardyoon)
    HAMA-84: Add a writable comparable for BlockID (edwardyoon) 
    HAMA-81: Add subVector(int i0, int i1) to Vector (edwardyoon)
    Hama-80: Add identity(int m, int n) 
               which returns identity matrix (edwardyoon) 
    HAMA-62: Hama Shell Implementation (samuel via edwardyoon)
    HAMA-61: Load / save matrices from HTable (edwardyoon)
    HAMA-51: Add get/setRowAttribute() method (edwardyoon)
    HAMA-13: Matrix multiplication (edwardyoon)
    HAMA-48: Add getColumn(int column) method 
               which returns column vector (edwardyoon)
    HAMA-49: Add iterator() method to vector (edwardyoon)
    HAMA-43: Color Hama Logo (Morakot via chanwit)
    HAMA-37: Add forrest build to Hudson patch build script (edwardyoon)
    HAMA-34: Hudson/Jira Intergration (edwardyoon)
    HAMA-36: Add svn information to website (edwardyoon)
    HAMA-33: Add set() method (edwardyoon)
    HAMA-30: Add scaling method to Vector (edwardyoon)
    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)
    
  IMPROVEMENTS
    
    HAMA-144: GetProgress during MR over a matrix (samuel)
    HAMA-129: Improving speed of matrix multiplication (edwardyoon)
    HAMA-142: Trunk doesn't work for large matrices (edwardyoon)
    HAMA-143: Improve of random_mapred() (edwardyoon)